<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.QuranMainActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/_6sdp"
        app:tint="?blackWhite"
        android:layout_margin="@dimen/_6sdp"
        android:src="@drawable/ic_close"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/al_quran"
        android:textColor="?blackWhite"
        android:fontFamily="@font/poppins_bold"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintEnd_toStartOf="@id/search"
        app:layout_constraintTop_toTopOf="@id/back"
        app:layout_constraintBottom_toBottomOf="@id/search"/>

    <ImageView
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/_6sdp"
        app:tint="?blackWhite"
        android:layout_margin="@dimen/_6sdp"
        android:src="@drawable/ic_baseline_search_24"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/header_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_105sdp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_6sdp"
        app:cardCornerRadius="@dimen/_14sdp"
        android:elevation="@dimen/_14sdp">

        <ImageView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="?banner"
            android:scaleType="centerCrop"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_18sdp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="@color/white"
                    android:src="@drawable/ic_sharp_menu_book_24"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/last_read"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <TextView
                android:id="@+id/surah_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintBottom_toTopOf="@id/ayah_no"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/ayah_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:fontFamily="@font/roboto"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                app:tint="@color/white"
                android:padding="4dp"
                android:background="@drawable/about_background"
                android:src="@drawable/ic_baseline_chevron_right_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/header_card"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        app:tabUnboundedRipple="false"
        app:tabMode="scrollable"
        app:tabTextAppearance="@style/TabTextAppearance"
        app:tabIndicatorFullWidth="false">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surah" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/para"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookmark"/>

    </com.google.android.material.tabs.TabLayout>

    <ImageView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_settings"
        android:layout_marginEnd="@dimen/_14sdp"
        android:padding="@dimen/_4sdp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:background="@drawable/about_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tab_layout"
        app:layout_constraintBottom_toBottomOf="@id/tab_layout"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/quran_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_2sdp"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>